Fix: keep left nav on mobile

--- a/modules/main.css
+++ b/modules/main.css
@@ -17,20 +17,19 @@ body {
 	background-color: #428bca;
 }
 .sidebar {
-	display: none;
+	background-color: #f5f5f5;
+	border-right: 1px solid #eee;
+	left: 0;
+	display: block;
 }
 @media (min-width: 768px) {
 	.sidebar {
 		position: fixed;
-		top: 51px;
 		bottom: 0;
-		left: 0;
 		z-index: 1000;
-		display: block;
+		top: 51px;
 		padding: 20px;
 		overflow-x: hidden;
 		overflow-y: auto;
-		background-color: #f5f5f5;
-		border-right: 1px solid #eee;
 	}
 }
